src/Component/WelcomeHeader-Course/style.css
.welcome-container-course {
  position: absolute;
  width: 100%;
  background-color: #162365;
  border-radius: 0px 0px 0px 130px;
  height: 697px;
  margin-top: 3%;
}

.welcomebackground-surface-course {
  position: absolute;
  width: 35%;
  margin-top: 11%;
  margin-left: 6%;
}

.main-header-course {
  font-family: Roboto;
  color: white;
  font-weight: 700;
  font-size: 64px;
}

.sub-header-course {
  font-family: Roboto;
  color: white;
  font-weight: 400;
  font-size: 36px;
}

.welcomebackground-course {
  position: absolute;
  width: 918.97px;
  height: 458px;
  margin-left: 50%;
  margin-top: 3%;
}

.button1 {
  background-color: #8886ff;
  width: 205.94px;
  height: 70px;
  border-radius: 12px;
  font-size: 23px;
  color: white;
}

.button1-position {
  position: absolute;
  margin-top: 30%;
  margin-left: 66%;
}

/*# sourceMappingURL=style.css.map */

